tests/snapshots/align_comparisons/identity_operators.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/identity_operators.input.py
---
align-comparisons@269..270
align-comparisons@286..287
align-comparisons@306..307
align-comparisons@331..332
align-comparisons@380..381
