tests/snapshots/align_comparisons/mixed_operators.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/mixed_operators.input.py
---
align-comparisons@158..159
align-comparisons@196..197
