tests/snapshots/align_comparisons/multi_line_operand_breaks.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/multi_line_operand_breaks.input.py
---
align-comparisons@158..159
