tests/snapshots/align_comparisons/multi_line_operand_breaks.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/multi_line_operand_breaks.input.py
---
"""
An operand whose own range spans multiple source lines breaks the
run.
"""

if (
    foo == (
        1
        + 2
    )
    and bar_baz == 3
    and qux     == 4
):
    pass
