tests/snapshots/align_comparisons/nested_bool_op_breaks.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/nested_bool_op_breaks.input.py
---
align-comparisons@192..193
