tests/snapshots/align_comparisons/or_chain.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/or_chain.input.py
---
align-comparisons@119..120
align-comparisons@156..157
