tests/snapshots/align_comparisons/or_chain.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/or_chain.input.py
---
"""
The rule aligns operands across `or` chains with the same column
math it applies to `and` chains.
"""

if (
    foo        == 1
    or bar_baz == 2
    or quux    == 3
):
    pass
