tests/snapshots/align_comparisons/single_line_skipped.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/single_line_skipped.input.py
---

