tests/snapshots/align_comparisons/single_line_skipped.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/single_line_skipped.input.py
---
"""
A `BoolOp` that fits on one source line passes through verbatim.
"""

x = foo == 1 and bar_baz == 2 and qux == 3
